[gd_scene load_steps=13 format=3 uid="uid://y3cmoyxwas25"]

[ext_resource type="Script" uid="uid://b45eg7wi4kpso" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://8nisni38m46k" path="res://scenes/receptor.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://btyfsh7ox2fil" path="res://scripts/ReceptorRight.gd" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://bi1c86ghct4kr" path="res://scripts/ReceptorDown.gd" id="4_tefeu"]
[ext_resource type="Script" uid="uid://80ehvsugk513" path="res://scripts/ReceptorLeft.gd" id="5_o6xl0"]
[ext_resource type="Script" uid="uid://bsv48pjcxltab" path="res://scripts/generador_de_notas.gd" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://bifiog2k8yf8k" path="res://scenes/nota_enemiga.tscn" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://f0yb3dhfrf12" path="res://scripts/healtbar.gd" id="8_tipki"]
[ext_resource type="Script" uid="uid://d2yepyp4qbgvw" path="res://scripts/TextManager.gd" id="9_choun"]
[ext_resource type="PackedScene" uid="uid://brv330radkvap" path="res://scenes/FloatingText.tscn" id="10_ya4ey"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_choun"]
noise_type = 0
seed = 7
frequency = 1.0
offset = Vector3(-1000, 0, 0)
fractal_type = 3
fractal_lacunarity = 8.875
fractal_gain = 2.45
fractal_weighted_strength = 0.58
cellular_distance_function = 3
cellular_jitter = 9.565

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_choun"]
width = 100
height = 100
as_normal_map = true
noise = SubResource("FastNoiseLite_choun")

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="ReceptorLeft" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(450, 600)
script = ExtResource("5_o6xl0")

[node name="ReceptorDown" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(650, 600)
script = ExtResource("4_tefeu")

[node name="ReceptorUp" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(750, 600)

[node name="ReceptorRight" parent="." instance=ExtResource("1_o5qli")]
position = Vector2(550, 600)
script = ExtResource("3_tbgi4")

[node name="GeneradorNotas" type="Node2D" parent="."]
script = ExtResource("6_tefeu")
nota_scene = ExtResource("7_o6xl0")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 283.0
offset_top = 25.0
offset_right = 755.0
offset_bottom = 52.0
fill_mode = 1
script = ExtResource("8_tipki")

[node name="TextManager" type="Node2D" parent="."]
script = ExtResource("9_choun")
floating_text_scene = ExtResource("10_ya4ey")

[node name="TouchLeft" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.117647)
self_modulate = Color(1, 1, 0, 1)
texture_filter = 2
offset_left = 400.0
offset_top = 550.0
offset_right = 500.0
offset_bottom = 650.0
pivot_offset = Vector2(50, 50)
texture_normal = SubResource("NoiseTexture2D_choun")
stretch_mode = 0

[node name="TouchRight" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.117647)
self_modulate = Color(1, 0, 1, 1)
offset_left = 700.0
offset_top = 550.0
offset_right = 800.0
offset_bottom = 650.0
pivot_offset = Vector2(50, 50)
texture_normal = SubResource("NoiseTexture2D_choun")
stretch_mode = 0

[node name="TouchUp" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.117647)
self_modulate = Color(0, 1, 0, 1)
offset_left = 500.0
offset_top = 550.0
offset_right = 600.0
offset_bottom = 650.0
pivot_offset = Vector2(50, 50)
texture_normal = SubResource("NoiseTexture2D_choun")
stretch_mode = 0

[node name="TouchDown" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.117647)
self_modulate = Color(0, 1, 1, 1)
offset_left = 600.0
offset_top = 550.0
offset_right = 700.0
offset_bottom = 650.0
pivot_offset = Vector2(50, 50)
texture_normal = SubResource("NoiseTexture2D_choun")
stretch_mode = 0

[connection signal="button_up" from="TouchLeft" to="ReceptorLeft" method="restaurar_color"]
[connection signal="button_up" from="TouchLeft" to="ReceptorLeft" method="scale_up"]
[connection signal="pressed" from="TouchLeft" to="ReceptorLeft" method="verificar_notas_cercanas"]
[connection signal="pressed" from="TouchLeft" to="ReceptorLeft" method="scale_down"]
[connection signal="button_up" from="TouchRight" to="ReceptorRight" method="restaurar_color"]
[connection signal="button_up" from="TouchRight" to="ReceptorRight" method="scale_up"]
[connection signal="pressed" from="TouchRight" to="ReceptorRight" method="verificar_notas_cercanas"]
[connection signal="pressed" from="TouchRight" to="ReceptorRight" method="scale_down"]
[connection signal="button_up" from="TouchUp" to="ReceptorUp" method="restaurar_color"]
[connection signal="button_up" from="TouchUp" to="ReceptorUp" method="scale_up"]
[connection signal="pressed" from="TouchUp" to="ReceptorUp" method="verificar_notas_cercanas"]
[connection signal="pressed" from="TouchUp" to="ReceptorUp" method="scale_down"]
[connection signal="button_up" from="TouchDown" to="ReceptorDown" method="restaurar_color"]
[connection signal="button_up" from="TouchDown" to="ReceptorDown" method="scale_up"]
[connection signal="pressed" from="TouchDown" to="ReceptorDown" method="verificar_notas_cercanas"]
[connection signal="pressed" from="TouchDown" to="ReceptorDown" method="scale_down"]
