# main.gd (versi√≥n final)
extends Node2D

@onready var health_bar = $HealthBar
@onready var generador_notas = $GeneradorNotas
@onready var touch_buttons = [$TouchLeft,$TouchRight,$TouchUp,$TouchDown]

# Variable para forzar controles t√°ctiles (debug)
var forzar_touch: bool = false

func _ready():
	print("=== üéµ FNF GAME STARTED ===")
	
	# Verificar que todo est√© conectado
	verificar_nodos()
	
	# Detectar y configurar plataforma
	detectar_plataforma()
	
	# Conectar input para debug
	setup_debug_controls()

func verificar_nodos():
	print("\n=== VERIFICANDO NODOS ===")
	
	# HealthBar
	if health_bar:
		print("‚úÖ HealthBar encontrada")
	else:
		print("‚ùå HealthBar NO encontrada")
	
	# Generador de notas
	if generador_notas:
		print("‚úÖ GeneradorNotas encontrado")
	else:
		print("‚ùå GeneradorNotas NO encontrado")
	
	# TouchButtons
	if todos_los_botones_presentes() == true:
		print("‚úÖ TouchButtons encontrados")
	else:
		print("‚ùå TouchButtons NO encontrados")

func detectar_plataforma():
	# Detectar si es m√≥vil realmente
	var es_movil_real = OS.get_name() == "Android" or OS.get_name() == "iOS"
	
	# Si forzamos touch, mostrar siempre
	var mostrar_controles = es_movil_real or forzar_touch
	
	print("\n=== CONFIGURACI√ìN PLATAFORMA ===")
	print("Sistema: " + OS.get_name())
	print("Es m√≥vil real: " + str(es_movil_real))
	print("Forzar touch: " + str(forzar_touch))
	print("Mostrar controles: " + str(mostrar_controles))
	
	#if touch_buttons:
	#	touch_buttons.visible = mostrar_controles
		
	#	if mostrar_controles:
	#		print("üì± Controles t√°ctiles ACTIVADOS")
	#		if forzar_touch and not es_movil_real:
	#			print("   (Forzado para pruebas en PC)")
	#	else:
		#	print("‚å®Ô∏è  Controles de teclado ACTIVADOS")

func setup_debug_controls():
	# Configurar tecla para alternar controles t√°ctiles (F1)
	print("\n=== CONTROLES DEBUG ===")
	print("Presiona F1 para mostrar/ocultar controles t√°ctiles")
	print("Presiona F2 para mostrar debug de botones")

func _input(event):
	# Alternar controles t√°ctiles con F1
	if event.is_action_pressed("ui_f1"):
		forzar_touch = not forzar_touch
		detectar_plataforma()
		print("\nüîÑ Alternando controles t√°ctiles: " + str(forzar_touch))
		
		# MOSTRAR INFO DE CONEXIONES
		mostrar_info_conexiones()
	
	# Mostrar debug de botones con F2
	if event.is_action_pressed("ui_f2"):
		mostrar_info_conexiones()

func mostrar_info_conexiones():
	print("\n=== INFO CONEXIONES BOTONES ===")
	for boton in touch_buttons:
		if boton and is_instance_valid(boton):
			print("Bot√≥n: " + boton.name)
			print("  Posici√≥n: " + str(boton.position))
			print("  Visible: " + str(boton.visible))
			print("  Deshabilitado: " + str(boton.disabled))
			
			# Verificar a qu√© receptor est√° conectado
			var receptor = boton.get_parent().get_node(boton.name.replace("Touch", "Receptor"))
			if receptor:
				print("  Receptor conectado: " + receptor.name)
			else:
				print("  ‚ö†Ô∏è  NO hay receptor conectado")
				
func todos_los_botones_presentes() -> bool:
	# Revisa cada bot√≥n en la lista
	for boton in touch_buttons:
		# Si UN bot√≥n falta o no es v√°lido, retorna false
		if not boton or not is_instance_valid(boton):
			return false
	# Solo llega aqu√≠ si TODOS los botones est√°n OK
	return true
